--- a/css-fundamentals/style.css
+++ b/css-fundamentals/style.css
@@ -3,3 +3,37 @@ body {
   height: 100%;
   margin: 0;
 }
+
+header {
+  text-align: center;
+}
+
+nav a {
+  padding: 0 10px;
+  background-color: seashell;
+}
+
+#featured-property {
+  text-align: center;
+}
+
+#featured-property img {
+  margin: 0 auto;
+  display: block;
+}
+
+#featured-property figcaption {
+  font-size: smaller;
+}
+
+#featured-property p{
+  width: 800px;
+  margin: 10px auto;
+}
+
+#details div {
+  float: left;
+  width: 25%;
+  background-color: brown;
+  text-align: center;
+}
