--- a/css-responsive-layout/style.css
+++ b/css-responsive-layout/style.css
@@ -3,3 +3,175 @@ body {
   height: 100%;
   margin: 0;
 }
+
+header {
+  text-align: center;
+  width: 90%;
+  margin: 0 auto;
+}
+
+nav {
+  background-color: brown;
+  margin: 0 auto;
+  height: 90px;
+}
+
+nav a {
+  padding: 0.3em;  
+  background-color: brown;
+  color: rgba(0,0,0, 90%);  
+  opacity: 0.9;
+  text-decoration: none;
+  width: 40%;
+}
+
+#featured-property {
+  text-align: center;
+}
+
+#featured-property img {
+  margin: 0 auto;
+  display: block;
+  max-width: 100%;
+}
+
+#featured-property figcaption {
+  font-size: smaller;
+}
+
+/* mobile */
+.nav {
+  width: 90%;
+  display: flex;
+  flex-flow: column wrap;
+  justify-content: space-evenly;
+  align-content:space-around;
+  align-items: center;
+}
+
+#featured-property {
+  width: 90%;
+  margin: 0 auto;
+}
+
+#featured-property p{
+  margin: 10px auto;
+}
+
+.details {
+  display: flex;
+  flex-flow: column wrap;
+  justify-content: space-around;
+  align-items: center; 
+  background-color: brown;  
+  margin: 2em 20% 0em 20%; 
+}
+
+.details div {
+  background-color: brown;
+  text-align: center;
+  word-wrap: break-word;  
+  width: 60%;
+}
+
+/* tablet */
+@media only screen and (min-width: 600px) {
+  .nav {
+    width: 90%;
+    height: 60px;
+    display: flex;
+    flex-flow: column wrap;
+    justify-content: space-evenly;
+    align-content:space-around;
+  }
+  
+  .nav a {
+    width: 30%;
+  }
+
+  #featured-property {
+    width: 80%;
+    margin: 0 auto;
+  }
+
+  .details {
+    display: flex;
+    flex-flow: column wrap;
+    justify-content:space-evenly;
+    align-content: space-around;
+    align-items: center;
+    margin: 2em 15% 0em 15%;
+    width: 70%;
+    height: 360px;
+  }
+
+  .details div {
+    word-wrap: break-word;      
+    width: 40%;
+  }  
+}
+
+/* laptop */
+@media only screen and (min-width: 768px) {
+  .nav {
+    width: 90%;
+    height: 60px;
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-evenly;
+    align-content:space-around;
+  }
+  
+  .nav a {
+    width: 30%;
+  }
+
+  #featured-property {
+    width: 80%;
+    margin: 0 auto;
+  }
+
+  .details {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content:space-around;
+    align-content: space-around;
+    margin: 2em 10% 0em 10%;
+    width: 80%;
+    height: 360px;
+  }
+
+  .details div {
+    word-wrap: break-word;
+    width: 40%;
+  }  
+}
+
+/* desktop */
+@media only screen and (min-width: 1024px) {
+  .nav {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-content:space-around;
+  }
+  
+  .nav a {
+    width: 15%;
+  }
+
+  .details {
+    display: flex;
+    flex-direction: row;
+    justify-content:space-around;
+    margin: 2em 0 0em 0;
+    width: 100%;
+    height: 100%;
+  }
+  
+  .details div {
+    width: 25%;
+  }
+}
